<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    tools:context=".UpdateProfileActivity">


    <ImageView
        android:id="@+id/iv_user_img_upd"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/et_user_name_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_user_img_upd"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_user"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_user_email_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user_name_up"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/user_email"
        android:maxLines="1"
        android:textColor="#ffffff"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_user_mobile_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user_email_up"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_call"
        android:hint="@string/user_mobile"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user_mobile_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:text="Update"
        android:textColor="#149781" />

</RelativeLayout>